# rust-life

./: .gitignore  README.md
collected_code/: Cargo.toml  EI_E0007_ex0.rs.dis  EI_E0382_ex0.rs  EI_E0387_ex0.rs  EI_E0387_ex1.rs.dis  EI_E0478_ex0.rs  EI_E0491_ex0.rs.dis  EI_E0499_ex0.rs  EI_E0499_ex0_ext0-0.rs  EI_E0499_ex0_ext0-1.rs  EI_E0499_ex0_ext1-1.rs  EI_E0499_ex0_ext1-2.rs  EI_E0500_ex0.rs  EI_E0500_ex1.rs  EI_E0500_ex1_ext0.rs  EI_E0500_ex1_ext1.rs  EI_E0501_ex0.rs  EI_E0501_ex1.rs  EI_E0501_ex1_ext0.rs  EI_E0502_ex0.rs  EI_E0502_ex1.rs  EI_E0502_ex1_ext0.rs  EI_E0502_ex1_ext1.rs  EI_E0503_ex0.rs  EI_E0504_ex0.rs  EI_E0505_ex0.rs  EI_E0506_ex0.rs  EI_E0507_ex0.rs.dis  EI_E0507_ex0_fx0.rs.dis  EI_E0508_ex0.rs  EI_E0596_ex0.rs  EI_E0597_ex0.rs  EI_E0597_ex0.rs.dis  EI_E0597_ex0_ext0.rs  EI_E0621_ex0.rs.dis  EI_E0621_ex1.rs.dis  EI_E0626_ex0.rs  EI_E0712_ex0.rs.dis  EI_E0713_ex0.rs  EI_E0713_ex0_refmt.rs  (+34 more)
compiler_mod/: Cargo.toml  Makefile  inverted_rules.txt  naive_polonius_rules_v0.8.0.md  outlive_graph.dot  potentially_relevant_errors.md  rust-toolchain
compiler_mod/src/: data.rs  driver_utils.rs  dump_borrowck_info.rs  environment.rs  facts.rs  lib.rs  loops.rs  main.rs  regions.rs  verifier.rs
compiler_mod/test_helper/: check_all_examples_compare_results.sh  copy_resulting_main_graphs.sh  create_compare_main_graphs.sh  run_all_examples_copy_results.sh
rust-life-assistant/: CHANGELOG.md  README.md  package-lock.json  package.json
rust-life-assistant/src/: config.ts  errorVisualization.ts  extension.ts  util.ts
rust-life-assistant/src/test/: runTest.ts
(+2 files in other folders)
