[package]
name = "extract-error"
version = "0.1.0"
authors = ["Dominik Dietler <ddietler@student.ethz.ch>"]

[dependencies]
log = "0.3"
lazy_static = "1.0"
polonius-engine = { git = "https://github.com/shadow5tepper/polonius"}
csv = "1"
serde = "1.0"
serde_derive = "1.0"
regex = "1.0.1"
env_logger = "0.5.13"