[package]
name = "extract-error"
version = "0.1.0"
authors = ["Dominik Dietler <ddietler@student.ethz.ch>"]

[dependencies]
#Old versions, pinned only for old compiler TODO: remove after compiler update!
proc-macro2 = "= 0.4.19"
log = "0.4" # did change "automatically" anyway, should we change it here?
lazy_static = "1.0"
polonius-engine = { git = "https://github.com/shadow5tepper/polonius"}
csv = "1"
serde = "1.0"
serde_derive = "1.0"
regex = "1.0.1"
env_logger = "0.6.1"